syntax = "proto3";

package ai.verta.uac;
option go_package = "github.com/VertaAI/modeldb/protos/gen/go/protos/public/uac";

option java_multiple_files = true;
import "google/api/annotations.proto";
import "uac/UACService.proto";

message SCIMConfiguration{
  bool enabled = 1;
  string token = 2;
  bool multiple_org = 3;
  string org_name = 4;
}

service SCIMConfigurationService {
  rpc getConfiguration (Empty) returns (SCIMConfiguration) {
    option (google.api.http) = {
      get: "/v1/scim/getConfiguration"
    };
  };
}
